k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site
  namespace: default
  labels:
    app: personal-site
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: personal-site
